2023/11/29 註冊和登入 功能與修改

--- a/templates/already_exist_account.html
+++ b/templates/already_exist_account.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>404 Error - SB Admin</title>
+        <title>404 Error </title>
         <link href="../static/css/styles_admin.css" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     </head>
@@ -18,11 +18,12 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-6">
                                 <div class="text-center mt-4">
-                                    <img class="mb-4 img-error" src="../static/assets/img/error-404-monochrome.svg" />
-                                    <p class="lead">This requested URL was not found on this server.</p>
-                                    <a href="index_admin.html">
+                                    <h1 class="display-1">您輸入的使用者已註冊囉</h1>
+                                    <p class="lead">Already_Exist</p>
+                                    <p>Go forward to login</p>
+                                    <a href="{{ url_for('userController.login') }}">
                                         <i class="fas fa-arrow-left me-1"></i>
-                                        Return to Dashboard
+                                        Return to Login
                                     </a>
                                 </div>
                             </div>
