--- a/templates/register.html
+++ b/templates/register.html
@@ -24,8 +24,14 @@
                                             <div class="row mb-3">
                                                 <div class="col-md-6">
                                                     <div class="form-floating mb-3 mb-md-0">
-                                                        <input class="form-control" id="inputName" name="user_account" type="text"  required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}$" title="Must contain at least one number, one uppercase letter, one lowercase letter, and at least 8 characters" placeholder="Enter your name" />
+                                                        <input class="form-control" id="inputName_1" name="user_account" type="text"  required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}$" title="Must contain at least one number, one uppercase letter, one lowercase letter, and at least 8 characters" placeholder="Enter your name" />
                                                         <label for="inputName">User Account</label>
+                                                    </div>
+                                                </div>
+                                                <div class="col-md-6">
+                                                    <div class="form-floating mb-3 mb-md-0">
+                                                        <input class="form-control" id="inputName_2" name="user_name" type="text"  required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}$" title="Must contain at least one number, one uppercase letter, one lowercase letter, and at least 8 characters" placeholder="Enter your name" />
+                                                        <label for="inputName">User Name</label>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
