user_profile.html edit fixed

--- a/templates/login.html
+++ b/templates/login.html
@@ -22,8 +22,8 @@
                                     <div class="card-body">
                                         <form method="POST" action="{{ url_for('userController.login') }}">
                                             <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputName" name="user_account" type="text" placeholder="Enter your name" />
-                                                <label for="inputName">User Name</label>
+                                                <input class="form-control" id="inputAccount" name="user_account" type="text" placeholder="Enter your name" />
+                                                <label for="inputAccount">User Name</label>
                                             </div>
                                             <div class="form-floating mb-3">
                                                 <input class="form-control" id="inputPassword" name="user_password" type="password" placeholder="Password" />
