--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,16 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-5">
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
+                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3>
+                                        {% with messages = get_flashed_messages(with_categories=true) %}
+                                        {% for category, message in messages %}
+                                            <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
+                                                {{ message }}
+                                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                            </div>
+                                        {% endfor %}
+                                    {% endwith %}
+                                    </div>
                                     <div class="card-body">
                                         <form method="POST" action="{{ url_for('userController.login') }}">
                                             <div class="form-floating mb-3">
