--- a/templates/register.html
+++ b/templates/register.html
@@ -1,82 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Register - SB Admin</title>
-        <link href="../static/css/styles_admin.css" rel="stylesheet" />
-        <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
-    </head>
-    <body class="bg-primary">
-        <div id="layoutAuthentication">
-            <div id="layoutAuthentication_content">
-                <main>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-7">
-                                <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Create Account</h3></div>
-                                    <div class="card-body">
-                                        <form method="POST" action="{{ url_for('userController.register') }}">
-                                            <div class="row mb-3">
-                                                <div class="form-floating mb-3 mb-md-0">
-                                                    <input class="form-control" id="inputAccount" name="user_account" type="text" placeholder="Enter your account" />
-                                                    <label for="inputAccount">User Account</label>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>Register - SB Admin</title>
+    <link href="../static/css/styles_admin.css" rel="stylesheet" />
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+</head>
+<body class="bg-primary">
+    <div id="layoutAuthentication">
+        <div id="layoutAuthentication_content">
+            <main>
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-7"><div class="card shadow-lg border-0 rounded-lg mt-5">
+                                <div class="card-header">
+                                    <h3 class="text-center font-weight-light my-4">Create Account</h3>
+                                    <!-- Flash Messages Section -->
+                                    {% with messages = get_flashed_messages(with_categories=true) %}
+                                        {% if messages %}
+                                            {% for category, message in messages %}
+                                                <div class="alert alert-{{ category }}">
+                                                    {{ message }}
                                                 </div>
+                                            {% endfor %}
+                                        {% endif %}
+                                    {% endwith %}
+                                    <!-- End Flash Messages Section -->
+                                </div>
+                                <div class="card-body">
+                                    <form method="POST" action="{{ url_for('userController.register') }}">
+                                        {{ form.hidden_tag() }}
+                                        <div class="row mb-3">
+                                            <div class="form-floating mb-3 mb-md-0">
+                                                {{ form.user_account(class="form-control", placeholder="Enter your account") }}
+                                                <label>User Account</label>
+                                                {% for error in form.user_account.errors %}
+                                                    <span style="color: red;">{{ error }}</span><br>
+                                                {% endfor %}
                                             </div>
-                                            <div class="row mb-3">
-                                                <div class="form-floating">
-                                                    <input class="form-control" id="inputPassword" name="user_password" type="password" placeholder="Enter your password" />
-                                                    <label for="inputPassword">User Password</label>
-                                                </div>
+                                        </div>
+                                        <div class="row mb-3">
+                                            <div class="form-floating">
+                                                {{ form.user_password(class="form-control", placeholder="Enter your password") }}
+                                                <label>User Password</label>
+                                                {% for error in form.user_password.errors %}
+                                                    <span style="color: red;">{{ error }}</span><br>
+                                                {% endfor %}
                                             </div>
-                                            <div class="row mb-3">
-                                                <div class="form-floating mb-3 mb-md-0">
-                                                    <input class="form-control" id="inputName" name="user_name" type="text" placeholder="Enter your name" />
-                                                    <label for="inputName">User Name</label>
-                                                </div>
+                                        </div>
+                                        <div class="row mb-3">
+                                            <div class="form-floating mb-3 mb-md-0">
+                                                {{ form.user_name(class="form-control", placeholder="Enter your name") }}
+                                                <label>User Name</label>
+                                                {% for error in form.user_name.errors %}
+                                                    <span style="color: red;">{{ error }}</span><br>
+                                                {% endfor %}
                                             </div>
-                                            <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputEmail" type="email" name="user_email" placeholder="name@example.com" />
-                                                <label for="inputEmail">Email address</label>
+                                        </div>
+                                        <div class="row mb-3">
+                                            <div class="form-floating mb-3 mb-md-0">
+                                                {{ form.user_gender(class="form-select") }}
+                                                <label>Gender</label>
+                                                {% for error in form.user_name.errors %}
+                                                    <span style="color: red;">{{ error }}</span><br>
+                                                {% endfor %}
                                             </div>
-                                            <div class="form-floating mb-3">
-                                                <input class="form-control" id="inputBirthday" name="user_birthday" type="date"  required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}$" title="Must contain at least one number, one uppercase letter, one lowercase letter, and at least 8 characters" placeholder="Select your birthday" />
-                                                <label for="inputBirthday">User_birthday</label>
-                                            </div>
-                                            <div class="mt-4 mb-0">
-                                                <button type="submit" class="d-grid btn btn-primary btn-block">Create Account</button>
-                                            </div>
-                                        </form>
-                                    </div>
-                                    <div class="card-footer text-center py-3">
-                                        <div class="small"><a href="{{ url_for('userController.login') }}">Have an account? Go to login</a></div>
-                                    </div>
+                                        </div>
+                                        <div class="form-floating mb-3">
+                                            {{ form.user_email(class="form-control", placeholder="name@example.com") }}
+                                            <label>Email address</label>
+                                            {% for error in form.user_email.errors %}
+                                                <span style="color: red;">{{ error }}</span><br>
+                                            {% endfor %}
+                                        </div>
+                                        <div class="form-floating mb-3">
+                                            {{ form.user_birthday(class="form-control", placeholder="Select your birthday") }}
+                                            <label>User Birthday</label>
+                                            {% for error in form.user_birthday.errors %}
+                                                <span style="color: red;">{{ error }}</span><br>
+                                            {% endfor %}
+                                        </div>
+                                        <div class="mt-4 mb-0">
+                                            <button type="submit" class="d-grid btn btn-primary btn-block">Create Account</button>
+                                        </div>
+                                    </form>
+                                </div>
+                                <div class="card-footer text-center py-3">
+                                    <div class="small"><a href="{{ url_for('userController.login') }}">Have an account? Go to login</a></div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </main>
-            </div>
-            <div id="layoutAuthentication_footer">
-                <footer class="py-4 bg-light mt-auto">
-                    <div class="container-fluid px-4">
-                        <div class="d-flex align-items-center justify-content-between small">
-                            <div class="text-muted">Copyright &copy; Your Website 2023</div>
-                            <div>
-                                <a href="#">Privacy Policy</a>
-                                &middot;
-                                <a href="#">Terms &amp; Conditions</a>
-                            </div>
+                </div>
+            </main>
+        </div>
+        <div id="layoutAuthentication_footer">
+            <footer class="py-4 bg-light mt-auto">
+                <div class="container-fluid px-4">
+                    <div class="d-flex align-items-center justify-content-between small">
+                        <div class="text-muted">Copyright &copy; Your Website 2023</div>
+                        <div>
+                            <a href="#">Privacy Policy</a>
+                            &middot;
+                            <a href="#">Terms &amp; Conditions</a>
                         </div>
                     </div>
-                </footer>
-            </div>
+                </div>
+            </footer>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-        <script src="../static/js/scripts.js"></script>
-    </body>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="../static/js/scripts.js"></script>
+</body>
 </html>
