--- a/templates/product/home.html
+++ b/templates/product/home.html
@@ -210,25 +210,9 @@
                 imageElement.alt = book.title;
 
                 const titleLinkElement = document.createElement("a");
-
                 // 將book.id嵌入到data屬性中
                 titleLinkElement.dataset.bookId = book.id;
-                titleLinkElement.addEventListener('click', function(event) {
-                    event.preventDefault(); // 防止點擊連結後跳轉頁面
-
-                    // 在這裡發送 AJAX 請求到相應的 API 端點
-                    const bookId = titleLinkElement.dataset.bookId;
-                    fetch(`/getProduct/${bookId}`)
-                        .then(response => response.json())
-                        .then(data => {
-                            // 在這裡處理從 API 返回的數據，可以更新頁面上的內容
-                            console.log(data);
-                        })
-                        .catch(error => {
-                            console.error('Error fetching data:', error);
-                        });
-                });
-
+                titleLinkElement.href = `/getProduct/${book.id}`;
                 titleLinkElement.textContent = book.title;
 
                 const authorElement = document.createElement("p");
