--- a/templates/product/header.html
+++ b/templates/product/header.html
@@ -11,11 +11,16 @@
         </ul>
 
         <form class="d-flex">
-            <button class="btn btn-outline-dark" type="submit">
-                <i class="bi-cart-fill me-1"></i>
-                Cart
-                <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-            </button>
+            {% if current_user.is_authenticated %}
+                <!-- 如果使用者已登入，則導向到購物車頁面 -->
+                <a href="{{ url_for('cartController.view_cart') }}" class="btn btn-outline-dark ms-2">
+                    <i class="bi-cart-fill me-1"></i>
+                        Cart
+                    <span class="badge bg-dark text-white ms-1 rounded-pill">{{ cart_item_count }}</span> <!-- 您可以修改這裡的數字以反映實際的購物車物品數量 -->
+                </a>
+            {% else %}
+                <!-- 不顯示按紐 -->
+            {% endif %}
         </form>
 
         <ul class="nav">
