--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -1,3 +1,10 @@
+<head>
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='css/slide.css') }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='css/book.css') }}" rel="stylesheet"/>
+    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+</head>
 {% include '/product/header.html' %}
     <!-- Product section-->
     <section class="py-5">
@@ -5,21 +12,27 @@
             <div class="row gx-4 gx-lg-5 align-items-center">
                 <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="{{url_for('static', filename='assets/img/Book.jpg')}}" alt="..." /></div>
                 <div class="col-md-6">
-                    <div class="small mb-1">ISBN:{{ data[0][0] }}</div>
-                    <h1 class="display-5 fw-bolder">{{ data[0][2] }}</h1>
+                    <div class="small mb-1">ISBN:{{ data[0] }}</div>
+                    <h1 class="display-5 fw-bolder">{{ data[2] }}</h1>
                     <div class="fs-5 mb-5">
-                        <span>${{ data[0][1] }}</span>
-                        <span>${{ data[0][3] }}</span>
-                        <span>${{ data[0][4] }}</span>
+                        <p>
+                            <span>{{ data[3] }}</span>
+                            <span>{{ data[4] }}</span>
+                        </p>
+                        <span>${{ data[1] }}</span>
                     </div>
                     <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium at dolorem quidem modi. Nam sequi consequatur obcaecati excepturi alias magni, accusamus eius blanditiis delectus ipsam minima ea iste laborum vero?</p>
-                    <div class="d-flex">
-                        <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
-                        <button class="btn btn-outline-dark flex-shrink-0" type="button">
-                            <i class="bi-cart-fill me-1"></i>
-                            Add to cart
-                        </button>
-                    </div>
+                    <form method="POST" action="{{ url_for('cartController.add_to_cart') }}">
+                        <input type="hidden" name="item_id" value="{{ data[0] }}" />
+                        <div class="d-flex">
+                            <input class="form-control text-center me-3" id="inputQuantity" name="quantity" type="number" value="1" style="max-width: 3rem" />
+                            <button class="btn btn-outline-dark flex-shrink-0 add-to-cart-button" type="button">
+                                <i class="bi-cart-fill me-1"></i>
+                                Add to cart
+                            </button>
+                        </div>
+                    </form>
+
                 </div>
             </div>
         </div>
@@ -130,4 +143,40 @@
             </div>
         </div>
     </section>
-{% include 'product/footer.html' %}
+
+    <script>
+        document.querySelector('.add-to-cart-button').addEventListener('click', function(event) {
+            var formData = new FormData();
+            formData.append('item_id', document.querySelector('input[name="item_id"]').value);
+            formData.append('quantity', document.querySelector('input[name="quantity"]').value);
+
+            fetch('{{ url_for("cartController.add_to_cart") }}', {
+                method: 'POST',
+                body: formData,
+                credentials: 'same-origin' // 確保憑證（如 cookies）被發送
+            })
+            .then(response => {
+                if (response.status === 401) {
+                    alert('請先登入');
+                    setTimeout(function() {
+                        window.location.href = '{{ url_for("userController.login") }}'; // 修改為您的登錄頁面路徑
+                    });
+                    return;
+                }
+                return response.json();
+            })
+            .then(data => {
+                if (data && data.success) {
+                    alert('商品已成功加入購物車');
+                } else {
+                    // console.log(data);
+                    alert('加入購物車失敗');
+                }
+                window.location.href = '{{ url_for("cartController.view_cart") }}';
+            })
+            .catch((error) => {
+                console.error('Error:', error);
+            });
+        });
+    </script>
+{% include 'common/footer.html' %}
