--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -48,7 +48,17 @@
                     <p class="lead">上架時間: {{ data.create_datetime }}</p>
                     <p class="lead">更新時間: {{ data.update_datetime }}</p>
                     {% if data.item_status == '1' %}
-                        <button class="btn btn-primary" type="button">加入購物車</button>
+<!--                        <button class="btn btn-primary" type="button">加入購物車</button>-->
+                        <form method="POST" action="{{ url_for('cartController.add_to_cart') }}">
+                            <input type="hidden" name="item_id" value="{{ data.item_id }}" />
+                            <div class="d-flex">
+<!--                                <input class="form-control text-center me-3" id="inputQuantity" name="quantity" type="number" value="1" style="max-width: 3rem" />-->
+                                <button class="btn btn-outline-dark flex-shrink-0 add-to-cart-button" type="button">
+                                    <i class="bi-cart-fill me-1"></i>
+                                    Add to cart
+                                </button>
+                            </div>
+                        </form>
                     {% endif %}
                 </div>
             </div>
@@ -56,6 +66,39 @@
     </section>
     {% include 'common/footer.html' %}
 </body>
+<script>
+    document.querySelector('.add-to-cart-button').addEventListener('click', function(event) {
+        var formData = new FormData();
+        formData.append('item_id', document.querySelector('input[name="item_id"]').value);
+        // formData.append('quantity', document.querySelector('input[name="quantity"]').value);
 
+        fetch('{{ url_for("cartController.add_to_cart") }}', {
+            method: 'POST',
+            body: formData,
+            credentials: 'same-origin' // 確保憑證（如 cookies）被發送
+        })
+        .then(response => {
+            // 檢查回應類型
+            if (response.headers.get('Content-Type').includes('text/html')) {
+                alert('請先登入');
+                window.location.href = '{{ url_for("userController.login") }}';
+                return;
+            }
+            return response.json();
+        })
+        .then(data => {
+            if (data && data.success) {
+                alert('商品已成功加入購物車');
+            } else {
+                // console.log(data);
+                alert('加入購物車失敗');
+            }
+            window.location.href = '{{ url_for("cartController.view_cart") }}';
+        })
+        .catch((error) => {
+            console.error('Error:', error);
+        });
+    });
+</script>
 
 </html>
