--- a/templates/order/viewOrderDetails.html
+++ b/templates/order/viewOrderDetails.html
@@ -9,8 +9,17 @@
 <body>
     <div class="container mt-5">
         <h2>訂單明細 - 訂單編號: {{ order.order_id }}</h2>
-        <p>訂單總價: 計算方法需依據您的業務邏輯</p>
-
+        <p>訂單成立時間: {{ order.create_datetime }}</p>
+        <div class="mb-2">
+            訂單狀態 :
+            {% if order.order_status == '0' %}
+            <span class="badge bg-danger">未完成</span>
+            {% elif order.order_status == '1' %}
+            <span class="badge bg-success">完成</span>
+            {% elif order.order_status == '2' %}
+            <span class="badge bg-danger">取消</span>
+            {% endif %}
+        </div>
         <h3>商品列表</h3>
         <table class="table">
             <thead class="thead-dark">
@@ -22,24 +31,22 @@
                 </tr>
             </thead>
             <tbody>
-                {% for order_item, item, book in order_items %}
+                {% for order_item, book_name, book_price in order_items %}
                 <tr>
-                    <td>{{ book.book_name }}</td>
+                    <td>{{ book_name }}</td>
                     <td>{{ order_item.quantity }}</td>
-                    <td>{{ book.book_price }}</td>
-                    <td>{{ order_item.quantity * book.book_price }}</td>
+                    <td>{{ book_price }}</td>
+                    <td>{{ order_item.quantity * book_price }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
+        <div class="d-flex justify-content-between mt-3">
+            <a href="{{ url_for('productController.getProducts') }}" class="btn btn-primary">返回首頁</a>
+            <h4>訂單總價: {{ order.order_total_price }}</h4>
+        </div>
 
-        <a href="{{ url_for('productController.getProducts') }}" class="btn btn-primary">返回首頁</a>
     </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
