--- a/templates/order/viewOrderDetails.html
+++ b/templates/order/viewOrderDetails.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>訂單明細</title>
-    <!-- 引入 Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name="description" content=""/>
+    <meta name="author" content=""/>
+    <title>Bookmazon</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='css/slide.css') }}" rel="stylesheet"/>
+    <link href="{{ url_for('static', filename='css/book.css') }}" rel="stylesheet"/>
+    <style>
+        .content-body {
+            min-height: 80vh;
+        }
+    </style>
 </head>
 <body>
+{% include '/product/header.html' %}
     <div class="container mt-5">
         <h2>訂單明細 - 訂單編號: {{ order.order_id }}</h2>
         <p>訂單成立時間: {{ order.create_datetime }}</p>
