--- a/templates/login/loginForm.html
+++ b/templates/login/loginForm.html
@@ -29,7 +29,7 @@
                     <label class="form-check-label" for="inputRememberPassword">記住密碼</label>
                 </div>
                 <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                    <a class="small" href="{{ url_for('userController.forget_password') }}">忘記密碼了嗎?</a>
+                    <a class="small" href="{{ url_for('userController.forgot_password') }}">忘記密碼了嗎?</a>
                     <button type="submit" class="d-grid btn btn-primary btn-block">登入</button>
                 </div>
             </form>
