--- a/templates/product/home.html
+++ b/templates/product/home.html
@@ -186,6 +186,7 @@
 {% include './common/footer.html' %}
 
 </body>
+<script src="{{ url_for('static', filename='js/slide.js') }}"></script>
 <script>
         document.addEventListener("DOMContentLoaded", function () {
             let currentPage = 1;
